# boletus

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  install.sh  pyproject.toml  slack-app-manifest.json  slack-manifest.yaml
boletus/: __init__.py  bot.py  claude_runner.py  cli.py  config.py  cost_tracker.py  delegation.py  guardrails.py  integrations.py  llm.py  local_runner.py  project_manager.py  scheduler.py  task_manager.py  workflows.py
boletus/onboarding/: __init__.py  channel_manager.py  file_parser.py  prompts.py  wizard.py
crewmatic/: __init__.py  agent_loader.py  bot.py  claude_runner.py  cli.py  config.py  context.py  cost_tracker.py  delegation.py  integrations.py  link_tracker.py  local_runner.py  memory.py  scheduler.py  slack_format.py  task_manager.py
crewmatic/onboarding/: channel_manager.py  crew_generator.py  file_parser.py  prompts.py  wizard.py
examples/dev-team/: crew.yaml
examples/startup/: crew.yaml
tests/: test_config.py  test_cost_tracker.py  test_delegation.py  test_file_parser.py  test_guardrails.py  test_integrations.py  test_memory.py  test_task_manager.py  test_workflows.py
