[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewmatic"
version = "0.1.0"
description = "Your first AI company — Open-source multi-agent framework that runs your business autonomously"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Majny", email = "crewmatic@example.com" },
]
keywords = ["ai", "agents", "multi-agent", "autonomous", "slack", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
crewmatic = "crewmatic.cli:main"

[project.urls]
Homepage = "https://github.com/Majny/crewmatic"
Repository = "https://github.com/Majny/crewmatic"
Issues = "https://github.com/Majny/crewmatic/issues"
